_assets/css/elevate_theme/_layout.scss
/* ... */
.site > section {
    padding: 6vw;

    @media all and (min-width: 1441px) {
        padding: 90px;
    }

    h1.small-full-width {
        margin: 0 auto;
        margin-bottom: 60px;
        width: 100%;
        max-width: 1090px;

        @media screen and (max-width: 450px) {
            margin-bottom: 20px;
        }
    }

    .inner-content-holder {
        display: flex;
        margin: 0 auto;
        padding: 40px;
        width: 100%;
        max-width: 1090px;
        justify-content: space-between;
        align-items: center;

        @media screen and (max-width: 768px) {
            padding: 0;
        }

        @media screen and (max-width: 450px) {
            flex-wrap: wrap;
        }

        .section-content {
            h2 {
                margin-bottom: 40px;
            }
            p {
                font-weight: 500;
                line-height: 175%;
            }

            @media screen and (max-width: 768px) {
                width: 50%;
            }

            @media screen and (max-width: 450px) {
                width: 100%;

                p {
                    font-size: $small-font-size;
                }
            }
        }

        .side-image {
            align-self: flex-start;
            @media screen and (max-width: 450px) {
                margin: 0;
                margin-top: 30px;
                padding-bottom: 100%;
                width: 100%;
            }
        }
    }
}


.site > .cta {
    display: block;
    width: 100%;

    .cta-inner {
        display: flex;
        margin: 0 auto;
        flex-wrap: wrap;
        padding: 20px 12vw 20px 12vw;
        color: #fff;
        justify-content: space-between;
        align-items: center;
        
        @media screen and (min-width: 1441px) {
            padding: 20px 175px 20px 175px;
            max-width: 1440px;
        }

        @media screen and (max-width: 1140px) {
            padding: 20px 5vw 20px 5vw;
        }

        @media screen and (max-width: 930px) {
            align-items: center;
            text-align: center;
        }

        @media screen and (max-width: 768px) {
            padding: 8vw;
        }
    }

    
    >div {
        flex-basis: 70%;
        @media screen and (max-width: 930px) {
            flex-basis: 100%;
        }
    }
    h3 {
        margin: 0;
        font-size: 32px;
        letter-spacing: 0.3px;
        line-height: 140%;

        @media screen and (max-width: 1140px) {
            font-size: 28px;
            letter-spacing: 0.2px;
        }

        @media screen and (max-width: 768px) {
            font-size: 18px;
            letter-spacing: 0px;
            font-weight: 500;
        }
    }

    h4 {
        margin: 0;
        font-size: 22px;
        line-height: 140%;

        @media screen and (max-width: 1140px) {
            font-size: 18px;
        }

        @media screen and (max-width: 768px) {
            margin-top: 12px;
            font-size: 14px;
            font-weight: 700;
        }
    }

    .button.rounded {
        height: 36px;
        line-height: 36px;

        @media screen and (max-width: 930px) {
            margin: 0 auto;
            margin-top: 24px;
        }

        @media screen and (max-width: 768px) {
            font-size: 14px;
            width: 120px;
        }
    }

    &.cta-orange {
        background-color: $maize;
        h3 {
            color: $greyish-brown;
        }
    }
    &.cta-green {
        background-color: $avocado;

        .cta-text {
            h4 {
                a {
                    color: #fff;
                }
            }
        }

        @media screen and (max-width: 834px) {
            .cta-text {
                width: 100%;
            }
        }

        @media screen and (max-width: 450px) {
            background-color: $maize;
        }

        h3 {
            color: #fff;

            @media screen and (max-width: 768px) {
                color: $greyish-brown;
            }
        }

    }
}

.site#treatment-programs {
    .cta {
        &.cta-green {
            padding-top: 40px;
            padding-bottom: 40px;

            .cta-text {
                width: 70%;

                @media screen and (max-width: 925px) {
                    width: 100%;
                }                
            }

            h3 {
                margin-bottom: 10px;
                font-size: 28px;
                font-weight: 500;

                @media screen and (max-width: 768px) {
                    font-size: 18px;
                    letter-spacing: 0px;
                }
            }

            h4 {
                font-size: 16px;
                line-height: 175%;

                @media screen and (max-width: 768px) {
                    font-size: 14px;
                }
            }

            .button.rounded {
                @media screen and (max-width: 768px) {
                    padding-right: 20px;
                    padding-left: 20px;
                    width: auto;
                }
            }
        }
    }
}
/* ... */

